[tool.poetry]
name = "rss_parser"
version = "0.1.0"
description = ""
authors = ["Carlo De Pieri <depieri.carlo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rfeed = "^1.1.1"
feedparser = "^6.0.8"
python-dateutil = "^2.8.2"
beautifulsoup4 = "^4.10.0"
selenium = "^4.1.3"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
xvfbwrapper = "^0.2.9"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
invoke = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
